[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcee-extension-ci-tests"
version = "0.1.0"
description = "CI tests for Arcee extension"
requires-python = ">=3.8"
dependencies = [
    "azure-cli==2.50.0",
    "azure-identity==1.10.0",
    "azure-kusto-data==4.2.0",
    "colorama==0.4.6",
    "cryptography==41.0.2",
    "jinja2==3.1.4",
    "msal==1.22.0",
    "msal-extensions==1.0.0",
    "packaging",
    "pandas==2.0.3",
    "numpy==1.26.4",
    "pyodbc==4.0.39",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "tabulate==0.9.0",
    "urllib3==1.26.15",
    "strenum==0.4.15",
    "requests==2.31.0",
    "tzlocal==5.2",
    "pywin32==307; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pyinstaller",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.default]
dependencies = [
    "pytest==7.4.4",
    "pyinstaller",
    "black",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
format = "black ."
build-exe = "pyinstaller --onefile main.py"

[tool.black]
line-length = 80

[tool.pytest.ini_options]
log_cli = "true"
log_cli_level = "info"
log_file_level = "debug"
log_cli_format ="%(asctime)-15s [%(levelname)-8s] [%(funcName)-40s]  %(message)s"
log_file_format = "%(asctime)-15s [%(levelname)-8s] [%(funcName)-40s]  %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S%z"
log_file_date_format = "%Y-%m-%dT%H:%M:%S%z"
markers = [
    "owner: Test function owner, used for Azure DevOps assignment", 
    "area: Test function product area path, used for Azure DevOps assignment",
]
filterwarnings = [
    "ignore::pytest.PytestExperimentalApiWarning",
]